force-app/main/default/objects/SMS_CoreMapping__c/SMS_CoreMapping__c.object-meta.xml
<CustomObject>
    <label>SMS Core Mapping</label>
    <nameField>
        <displayFormat>Mapping-{00000}</displayFormat>
        <label>SMS_CoreMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Core Mapping</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>