force-app/main/default/objects/SMS_CoreMapping__c/fields/IsPrimaryFlag__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimaryFlag</label>
    <type>Checkbox</type>
</CustomField>