force-app/main/default/objects/SMS_CoreMapping__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Reinstatement &gt; 30</fullName>
            </value>
            <value>
                <fullName>Reinstatement &lt;= 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>