force-app/main/default/objects/SMS_CoreMapping__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>