force-app/main/default/objects/SMS_CoreMapping__c/fields/Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>Term_Duration__c</fullName>
    <label>Term Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>