force-app/main/default/objects/SMS_CoreMapping__c/fields/ZuoraOnetimeProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraOnetimeProductRatePlanId__c</fullName>
    <label>ZuoraOnetimeProductRatePlanId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>