force-app/main/default/objects/SMS_CoreMapping__c/fields/ZuoraProductId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraProductId__c</fullName>
    <label>ZuoraProductId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>