force-app/main/default/objects/SMS_CoreMapping__c/fields/ZuoraRecurringProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraRecurringProductRatePlanId__c</fullName>
    <label>ZuoraRecurringProductRatePlanId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>