force-app/main/default/objects/SMS_CoreMapping__c/fields/ZuoraSubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSubscriptionTerm__c</fullName>
    <label>ZuoraSubscriptionTerm</label>
    <length>80</length>
    <type>Text</type>
</CustomField>