force-app/main/default/objects/SMS_CoreMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>SubType__c</columns>
    <columns>Type__c</columns>
    <columns>IsPrimaryFlag__c</columns>
    <columns>Billing_Jurisdiction__c</columns>
    <columns>ZuoraOnetimeProductRatePlanId__c</columns>
    <columns>ZuoraRecurringProductRatePlanId__c</columns>
    <columns>Term_Duration__c</columns>
    <columns>ZuoraProductId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>